rinominati file secondo convenzione

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,13 +6,13 @@ set(CMAKE_C_STANDARD 11)
 add_executable(CommonTest ./tests/CommonTests.cpp src/control.c)
 
 add_executable(InsertionSortTest ./tests/InsertionSort.cpp
-        ./src/insertionSort.c ./src/control.c ./lib/common.h)
+        src/insertion_sort.c ./src/control.c ./lib/common.h)
 
 add_executable(SelectionSortTest ./tests/SelectionSort.cpp
-        ./src/selectionSort.c src/control.c ./lib/common.h)
+        src/selection_sort.c src/control.c ./lib/common.h)
 
-add_executable(QuickSortTests ./tests/QuickSortTests.cpp ./lib/common.h ./src/control.c ./src/quickSort.c
-        lib/quickSort.h)
+add_executable(QuickSortTests ./tests/QuickSortTests.cpp ./lib/common.h ./src/control.c src/quick_sort.c
+        lib/quick_sort.h)
 
 add_subdirectory(lib/google_test_lib)
 include_directories(lib/google_test_lib/googletest/include)
