update add CTest

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ add_executable(SelectionSortTest tests/sorting/SelectionSort.cpp
 add_executable(QuickSortTests tests/sorting/QuickSortTests.cpp ./lib/common.h ./src/sorting/control.c src/sorting/quick_sort.c
         lib/quick_sort.h)
 
-add_executable(DataStructure ./tests/dataStructure/HeapTest.cpp ./tests/dataStructure/main.cpp)
+add_executable(DataStructureTest ./src/dataStructure/heap.c tests/dataStructure/HeapTest.cpp tests/dataStructure/main.cpp)
 
 add_subdirectory(lib/google_test_lib)
 include_directories(lib/google_test_lib/googletest/include)
@@ -24,11 +24,16 @@ target_link_libraries(CommonTest gtest gtest_main)
 target_link_libraries(InsertionSortTest gtest gtest_main)
 target_link_libraries(SelectionSortTest gtest gtest_main)
 target_link_libraries(QuickSortTests gtest gtest_main)
-target_link_libraries(DataStructure gtest gtest_main)
+target_link_libraries(DataStructureTest gtest gtest_main)
 
 enable_testing()
 
-add_executable(SelectionSortCTest tests/sorting/SelectionSort.cpp
-        src/sorting/selection_sort.c src/sorting/control.c ./lib/common.h)
+add_test(DataStructureTest DataStructureTest)
 
-add_test(SSCTest SelectionSortCTest)
+add_test(QuickSortTests QuickSortTests)
+
+add_test(CommonTest CommonTest)
+
+add_test(SelectionSortTests SelectionSortTest)
+
+add_test(InsertionSortTest InsertionSortTest)
